# TA

./: .gitignore  README.md
BE/: .env.example  Makefile  README.md  pyproject.toml  requirements-cli.txt  requirements.txt
BE/app_cli/: __init__.py  main.py  terminal_ui.py
BE/trading_core/: __init__.py  config.py
BE/trading_core/data/: markets.yml  seeds.yml
BE/trading_core/data_fetcher/: __init__.py  commodities.py  crypto.py  equities.py  forex.py  funds.py  futures.py  warrants.py
BE/trading_core/data_fetcher/adapters/: __init__.py  binance.py  coinbase.py  coingecko.py  cryptocompare.py  kraken.py  kucoin.py  stooq.py  twelvedata.py  yahoo.py
BE/trading_core/indicators/: __init__.py  fundamentals.py  microstructure.py  price_history.py  sentiment.py  technical.py
BE/trading_core/persistence/: __init__.py  cache.py  history_tracker.py  performance_evaluator.py
BE/trading_core/scoring/: __init__.py  explainer.py  regime.py  risk.py  weights.py
BE/trading_core/sentiment/: __init__.py  commodities.py  crypto.py  equities.py  forex.py  funds.py  futures.py  init.py  utils.py  warrants.py
BE/trading_core/strategy/: __init__.py  rules_engine.py  strategy_llm.py
BE/trading_core/utils/: __init__.py  io.py  logging.py  timezones.py
trading_core/sentiment/: utils.py
